--- a/src/popup/styles/vars.pcss
+++ b/src/popup/styles/vars.pcss
@@ -9,8 +9,10 @@
     --green74: #66b574;
     --green76: #76a834;
     --green700: #74a352;
+    --grayb8: #b8b8b8;
     --green-light: #8ac02f;
     --grayf3: #f3f3f3;
+    --white: #ffffff;
     --orange: #eb9300;
     --orange-dark: #da8a04;
     --pink: #ff7b7b;
